tests/posts/invalid/missing-title.markdown
; Title: Commented-out title, should throw a parse error. The rest is valid.

Tags: News, Slugs, PHP

Slug: missing-title

Date: 2014-06-10

Body:

# Heading

Text.
